# Embedded.Rust.Examples

./: Readme.md  templates.code-workspace
docs/: PlatformIo.md  Todo.md  docs.code-workspace
docs/ESP32/: Build.md  Debug.md  Flashing.md  Install.md  Overview.md  Ram-Boot.md  ToolchainBuild.md  VSCode.md
docs/ESP32/Debug/: Debug.md
docs/ESP32/Develop/: Build.md  Debug.md  Flash-CargoEspFlash.md  Flash-EspTool.md  Flashing.md
docs/ESP32/Setup/: Build-Toolchain.md  Install-ESP32-Gcc.md  Install-FlashTools.md  Install-LLVMClang.md  Install-Util.md  Install.md  ToolchainBuild.md
docs/ESP32/Sources/: Examples.md
docs/ESP32/old/: Build.md  Debug.md  Flashing.md  Overview.md  Toolchain.md
docs/General/Language/: References.md  Traits.md
docs/astro/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/astro/src1/: env.d.ts
docs/content/: index.md
docs/content/2.Rp2040/: Tools.md  index.md
docs/content/2.Rust/: Readme.md
docs/content/3.Stm32/: Debugging.md  Flash.md  Install.md
docs/content/3.old/: temp.txt
docs/docus/: nuxt.config.ts  package.json  pnpm-lock.yaml
docs/old/Arm/: Debug.md
docs/old/General/: Language.md
examples/ESP32/esp-helloworld-std/: Cargo.toml  Readme.md
examples/ESP32/espconfig/: Cargo.toml  espconfig.code-workspace
examples/STM32/blinky1/: Cargo.toml  Readme.md  Todo.md  hello_world.code-workspace
examples/STM32/blinky1-probe-rs/: Cargo.toml  Readme.md
examples/STM32/displays/oled-096-1/: .gitignore  Cargo.toml  Readme.md  oled-096-1.code-workspace
examples/STM32/displays/oled-096-1/.cargo/: config  config.toml
examples/STM32/displays/oled-096-1/cabling/: Cabling.kicad_sch
examples/STM32/displays/oled-096-1/examples/: border1.rs  noise1.rs
examples/STM32/displays/oled-096-1/src/: main.rs
hardware/Segger-Breakout1/: Readme.md  Segger-Breakout1.kicad_pcb  Segger-Breakout1.kicad_prl  Segger-Breakout1.kicad_pro  Segger-Breakout1.kicad_sch  fp-info-cache
src/ESP32/: Todo.md
src/ESP32-ProS3/: Readme.md
src/ESP32-Serial/: Readme.md
src/ESP32-Serial/general/blinky1-nostd/: Cargo.toml  Readme.md
src/ESP32-Serial/general/blinky1-nostd/.cargo/: config.toml
src/ESP32-Serial/general/blinky1-nostd/src/: main.rs
src/ESP32-Wrover-Kit/: Probe-rs.md  Readme.md
src/ESP32/blinky/: Cargo.toml  Makefile.toml  Readme.md  Todo.md  blinky.code-workspace
src/ESP32/blinky-esp32/: .gitignore  Makefile.toml  Todo.md  blinky-esp32.code-workspace
src/ESP32/blinky-esp32-nostd/: Makefile.toml  Readme.md
src/ESP32/blinky-esp32-std/: Cargo.toml  Todo.md
src/ESP32/blinky-esp32-std/.cargo/: config.toml
src/ESP32/blinky-esp32-std/makefiles/make/: make-build.toml  make-espflash.toml  make-esptool-upload.toml  make-lint.toml  make-list.toml  make-root.toml
src/ESP32/blinky-esp32-std/src/: main.rs
src/ESP32/blinky/.cargo/: config  config.toml  env-settings.toml
src/ESP32/blinky/blinky-esp32/: .gitignore  Makefile.toml
src/ESP32/blinky/gdb/: openocd-wrover-kit.cfg
src/ESP32/blinky/gdb/svd/: Readme.md
src/ESP32/blinky/make/make/: Cargo-Make-build.toml  Cargo-Make-esptool.toml  Cargo-Make-root.toml  useage.ers
src/ESP32/blinky/makefiles/make/: Cargo-Make-build.toml  Cargo-Make-espflash.toml  Cargo-Make-root.toml  usage.ers
src/ESP32/blinky/src/: main.rs  wdt.rs
src/ESP32/esp-idf-rust/bindings-generator/: .gitignore  Cargo.toml  Makefile.toml  bindings-generator.code-workspace
src/ESP32/esp-idf-rust/bindings-generator/.cargo/: env-settings.toml
src/ESP32/esp-idf-rust/bindings-generator/src/: builder.rs  buildfuncs.rs  main.rs  settings.rs  todo.md
src/ESP32/esp32-demo-new/: Cargo.toml  LICENSE  Readme.md
src/ESP32/general/blinky1-nostd/: Cargo.toml  Embed.toml  Todo.md
src/ESP32/idf-testapp/: Cargo.toml
src/ESP32/idf-wrapper/: Cargo.toml  Readme.md  Todo.md
src/ESP32/lib-idf-rust/: Cargo.toml  Makefile.toml  Readme.md  build-bindgen.py
src/ESP32/sdmmc/: Cargo.toml  Readme.md
src/ESP32/sdmmc/.cargo/: config
src/ESP32/sdmmc/src/: main.rs
src/ESP32/test1/: .gitignore  Makefile.toml  Readme.md
src/ESP32/wifi/: Readme.md
src/ESP32/x_idf-wrapper/: Cargo.toml  Todo.md
src/STM32/: Readme.md  Todo.md
src/STM32-F767ZI/general/rtt-log/: Cargo.toml
src/STM32-F767ZI/rfid/rfid1-pn532-adafruit/: Cargo.toml  Readme.md
src/STM32-F767ZI/rfid/rfid1-pn532-adafruit/src/: main.rs
src/x_ESP32/: Todo.md
src/x_ESP32/blinky-esp32-std/: Cargo.toml
(+190 files in other folders)
