[package]
name = "bindings-generator"
version = "0.1.0"
authors = ["grbd <hecatrons.workshop@gmail.com>"]
edition = "2018"

[[bin]]
name = "bindings-generator"

#[dependencies]
#libc = { version = "0.2.85", default-features = false }

[dependencies]
globwalk = "0.8.1"
bindgen = "0.57.0"
log = "0.4"
pretty_env_logger = "0.4"
