[package]
name = "rfid1-pn532-adafruit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = ">=0.6.15, <0.8"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
pn532 = "0.3.3"

[dependencies.stm32f7xx-hal]
version = "0.7.0"
features = ["stm32f767", "rt"]
